--- a/template.yaml
+++ b/template.yaml
@@ -26,6 +26,22 @@ Resources:
             Path: /hello
             Method: get
 
+  EmailSenderQueueFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: email_sender/
+      Handler: app.lambda_handler_sqs
+      Runtime: python3.8
+      Events:
+        EmailSQSEvent:
+          Type: SQS
+          Properties:
+            Queue: !GetAtt EmailSqsQueue.Arn
+            BatchSize: 10
+
+  EmailSqsQueue:
+    Type: AWS::SQS::Queue
+
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
