Failure items returned

--- a/template.yaml
+++ b/template.yaml
@@ -40,6 +40,9 @@ Resources:
           Properties:
             Queue: !GetAtt EmailSqsQueue.Arn
             BatchSize: 10
+            MaximumBatchingWindowInSeconds: 10
+            FunctionResponseTypes:
+              - ReportBatchItemFailures
 
   EmailSqsQueue:
     Type: AWS::SQS::Queue
