--- a/template.yaml
+++ b/template.yaml
@@ -34,6 +34,7 @@ Resources:
     Properties:
       ContentBasedDeduplication: true
       FifoQueue: true
+      ReceiveMessageWaitTimeSeconds: 10
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt EmailSqsDLQ.Arn
         maxReceiveCount: 5
