--- a/template.yaml
+++ b/template.yaml
@@ -20,14 +20,14 @@ Resources:
       Runtime: python3.9
       Policies:
         - AmazonSESFullAccess
-      Events:
-        EmailSQSEvent:
-          Type: SQS
-          Properties:
-            Queue: !GetAtt EmailSqsQueue.Arn
-            BatchSize: 10
-            FunctionResponseTypes:
-              - ReportBatchItemFailures
+      # Events:
+      #   EmailSQSEvent:
+      #     Type: SQS
+      #     Properties:
+      #       Queue: !GetAtt EmailSqsQueue.Arn
+      #       BatchSize: 10
+      #       FunctionResponseTypes:
+      #         - ReportBatchItemFailures
 
   EmailSqsQueue:
     Type: AWS::SQS::Queue
