--- a/template.yaml
+++ b/template.yaml
@@ -20,14 +20,12 @@ Resources:
       Runtime: python3.9
       Policies:
         - AmazonSESFullAccess
-      # Events:
-      #   EmailSQSEvent:
-      #     Type: SQS
-      #     Properties:
-      #       Queue: !GetAtt EmailSqsQueue.Arn
-      #       BatchSize: 10
-      #       FunctionResponseTypes:
-      #         - ReportBatchItemFailures
+        - AWSLambdaSQSQueueExecutionRole
+      Environment:
+        Variables:
+          EMAIL_SQS_QUEUE_URL: !Ref EmailSqsQueue
+          EMAIL_MAX_NUMBER_OF_MESSAGES: 5
+
 
   EmailSqsQueue:
     Type: AWS::SQS::Queue
@@ -38,6 +36,7 @@ Resources:
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt EmailSqsDLQ.Arn
         maxReceiveCount: 5
+
 
   EmailSqsQueuePolicy:
     Type: AWS::SQS::QueuePolicy
@@ -60,10 +59,12 @@ Resources:
       Queues:
         - Ref: EmailSqsQueue
 
+
   EmailSqsDLQ:
     Type: AWS::SQS::Queue
     Properties:
       FifoQueue: true
+
 
   EmailSNSTopic:
     Type: AWS::SNS::Topic
@@ -71,6 +72,7 @@ Resources:
       TopicName: "EmailSNSTopic.fifo"
       ContentBasedDeduplication: true
       FifoTopic: true
+
 
   EmailQueueToSnsSubscription:
     Type: AWS::SNS::Subscription
