--- a/template.yaml
+++ b/template.yaml
@@ -112,6 +112,35 @@ Resources:
       RawMessageDelivery: true
       TopicArn: !Ref EmailSNSTopic
 
+
+  EmailBounceHandlerFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: email_bounce_handler/
+      Handler: app.lambda_handler
+      Runtime: python3.9
+      Policies:
+        - AmazonSESFullAccess
+    Events:
+      EmailBounceEvent:
+        Type: SNS
+        Properties:
+          Topic: !GetAtt BouncedEmailSNSTopic.Arn
+
+
+  BouncedEmailSNSTopic:
+    Type: AWS::SNS::Topic
+    Properties:
+      TopicName: "BouncedEmailSNSTopic"
+
+
+  EmailBounceHandlerToSnsSubscription:
+    Type: AWS::SNS::Subscription
+    Properties:
+      Endpoint: !GetAtt EmailBounceHandlerFunction.Arn
+      Protocol: lambda
+      TopicArn: !Ref BouncedEmailSNSTopic
+
 # Outputs:
 #   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
 #   # Find out more about other implicit resources you can reference within SAM
