--- a/template.yaml
+++ b/template.yaml
@@ -128,6 +128,14 @@ Resources:
           Topic: !GetAtt BouncedEmailSNSTopic.Arn
 
 
+  BounceHandlerSNSInvokePermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+       Action: lambda:InvokeFunction
+       FunctionName: !Ref EmailBounceHandlerFunction
+       Principal: sns.amazonaws.com
+
+
   BouncedEmailSNSTopic:
     Type: AWS::SNS::Topic
     Properties:
