Support Multi-threading while processing multiple messages (#2)
* Sending suppression list coding done

* Separate handler for sending emails

* Multithreading implemented

* Fixed typo

* Removed bounce handling code

* Removed Regexutil

* Bounce handling - Adding to suppression list implemented

* Fixed the SAM template issue with SNS lambda integration

* Removed ErrorProcessor

* updated README

* Checking for hard bounce before adding to suppression list

* Caught generic exception

* Generic exception caught for bounce handler to avoid retries

Co-authored-by: Arun MR <arun_mr549e@protonmail.com>

--- a/template.yaml
+++ b/template.yaml
@@ -47,6 +47,7 @@ Resources:
       CodeUri: email_sender/
       Handler: app.lambda_handler_sqs
       Runtime: python3.9
+      MemorySize: 512
       Policies:
         - AmazonSESFullAccess
         - AWSLambdaSQSQueueExecutionRole
@@ -110,6 +111,43 @@ Resources:
       Protocol: sqs
       RawMessageDelivery: true
       TopicArn: !Ref EmailSNSTopic
+
+
+  EmailBounceHandlerFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: email_bounce_handler/
+      Handler: app.lambda_handler
+      Runtime: python3.9
+      Policies:
+        - AmazonSESFullAccess
+    Events:
+      EmailBounceEvent:
+        Type: SNS
+        Properties:
+          Topic: !GetAtt BouncedEmailSNSTopic.Arn
+
+
+  BounceHandlerSNSInvokePermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+       Action: lambda:InvokeFunction
+       FunctionName: !Ref EmailBounceHandlerFunction
+       Principal: sns.amazonaws.com
+
+
+  BouncedEmailSNSTopic:
+    Type: AWS::SNS::Topic
+    Properties:
+      TopicName: "BouncedEmailSNSTopic"
+
+
+  EmailBounceHandlerToSnsSubscription:
+    Type: AWS::SNS::Subscription
+    Properties:
+      Endpoint: !GetAtt EmailBounceHandlerFunction.Arn
+      Protocol: lambda
+      TopicArn: !Ref BouncedEmailSNSTopic
 
 # Outputs:
 #   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
